kubernetes/jenkins-service.yml
---
  kind: Service
  apiVersion: v1
  metadata:
    name: jenkins-ui
  spec:
    selector:
      app: jenkins-master
    ports:
      - protocol: TCP
        port: 8080
        targetPort: 8080
        name: ui
---
  kind: Service
  apiVersion: v1
  metadata:
    name: jenkins-discovery
  spec:
    selector:
      app: jenkins-master
    ports:
      - protocol: TCP
        port: 50000
        targetPort: 50000
        name: slaves
